

                 SCons - a software construction tool

                            Change Log



RELEASE X.XX - XXX

  From Benoit Belley:

  - Speed up the SCons.Util.to_string*() functions.

  - Optimize various Node intialization and calculations.

  - Optimize Executor scanning code.

  - Optimize Taskmaster execution, including dependency-cycle checking.

  From Steven Knight:

  - Make the -d, -e, -w and --no-print-directory options "Ignored for
    compatibility."  (We're not going to implement them.)

  - Fix a serious inefficiency in how SCons checks for whether any source
    files are missing when a Builder call creates many targets from many
    input source files.

  - In Java projects, make the target .class files depend only on the
    specific target .java files where the individual classes are defined.



RELEASE 0.98 - Sun, 30 Mar 2008 23:33:05 -0700

  From Benoit Belley:

  - Fix the --keep-going flag so it builds all possible targets even when
    a later top-level target depends on a child that failed its build.

  - Fix being able to use $PDB and $WINDWOWS_INSERT_MANIFEST together.

  - Don't crash if un-installing the Intel C compiler leaves left-over,
    dangling entries in the Windows registry.

  - Improve support for non-standard library prefixes and suffixes by
    stripping all prefixes/suffixes from file name string as appropriate.

  - Reduce the default stack size for -j worker threads to 256 Kbytes.
    Provide user control over this value by adding --stack-size and
    --warn=stack-size options, and a SetOption('stack_size') function.

  - Fix a crash on Linux systems when trying to use the Intel C compiler
    and no /opt/intel_cc_* directories are found.

  - Improve using Python functions as actions by incorporating into
    a FunctionAction's signature:
      - literal values referenced by the byte code.
      - values of default arguments
      - code of nested functions
      - values of variables captured by closures